--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,112 @@
-flask==1.0.2
+absl-py==1.4.0
+asttokens==2.2.1
+astunparse==1.6.3
+backcall==0.2.0
+bidict==0.22.1
+blinker==1.6.3
+bokeh==3.3.4
+cachelib==0.10.2
+cachetools==5.3.1
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
+colorama==0.4.6
+colorgram.py==1.2.0
+comm==0.1.3
+contourpy==1.1.1
+cycler==0.12.1
+debugpy==1.6.7
+decorator==5.1.1
+executing==1.2.0
+Flask==3.0.0
+Flask-Login==0.6.2
+Flask-Session==0.5.0
+Flask-SocketIO==5.3.6
+flatbuffers==23.5.26
+fonttools==4.43.1
+gast==0.4.0
+google-auth==2.19.1
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.54.2
+gunicorn==21.2.0
+h11==0.14.0
+h5py==3.10.0
+heroes==1.0.2
+idna==3.4
+ipykernel==6.23.1
+ipython==8.13.2
+ipywidgets==8.0.6
+itsdangerous==2.1.2
+jax==0.4.11
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.3.2
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+jupyterlab-widgets==3.0.7
+keras==3.1.1
+kiwisolver==1.4.5
+libclang==16.0.0
+Markdown==3.4.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mlxtend==0.23.0
+namex==0.0.7
+nest-asyncio==1.5.6
+numpy==1.26.1
+oauthlib==3.2.2
+opencv-python==4.9.0.80
+opt-einsum==3.3.0
+optree==0.10.0
+packaging==23.2
+pandas==2.1.1
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==10.1.0
+platformdirs==3.5.1
+plotly==5.19.0
+prompt-toolkit==3.0.38
+protobuf==4.23.2
+psutil==5.9.5
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycountry==22.3.5
+Pygments==2.15.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-engineio==4.8.0
+python-socketio==5.10.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.0.2
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.7.1
+rsa==4.9
+scikit-learn==1.3.1
+scipy==1.11.3
+seaborn==0.13.0
+simple-websocket==1.0.0
+six==1.16.0
+stack-data==0.6.2
+tabulate==0.9.0
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tornado==6.3.2
+tqdm==4.66.1
+traitlets==5.9.0
+typing_extensions==4.6.3
+tzdata==2023.3
+wcwidth==0.2.6
+Werkzeug==3.0.0
+widgetsnbextension==4.0.7
+wrapt==1.14.1
+wsproto==1.2.0
+xyzservices==2023.10.1
